--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-Hello World!
-2nd line!
+
+
+<html class="theme-next muse use-motion">
+<head>
+  <title> Test Page </title>
+</head>
+<body>
+  Hello World!
+</body>
+</html>
